--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id="profile">
         <img
           src="/assets/avatar.png"
-          alt="Foto de Ricardo Yanomane Usando camisa preta com fundo brando atrás."
+          alt="Foto de Ricardo Yanomane Usando camisa azul."
         />
         <p>@yanomane</p>
       </div>
